# c-_otus

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
task_1/: CMakeLists.txt
task_1/.github/workflows/: release.yml
task_1/tests/: CMakeLists.txt  test_package_version.cpp
